--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
       
       
       <h2> Número de casos e óbitos acumulados </h2>
-      Dados do Ministério da Saúde. <a href="https://raw.githubusercontent.com/peixebabel/COVID-19/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
+      Dados do Ministério da Saúde. <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
       {% include casos.html %}
       
       {% include obitos.html %}
@@ -95,13 +95,13 @@
       <h3> Casos e Óbitos Totais e Por Dia </h3>
       Informações de casos e óbitos acumulados e por dia. Utilize o menu acima dos gráficos para selecionar o estado do Brasil que deseja verificar.
       
-      Dados do Ministério da Saúde. <a href="https://raw.githubusercontent.com/peixebabel/COVID-19/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
+      Dados do Ministério da Saúde. <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
       <strong>Substituimos os dados dos dias 05/06 a 08/06 por reportes das Secretarias dado o súbito desaparecimento do portal covid do Ministério.</strong> 
       
       {% include resumo-por-estado.html %}
       
       <h3> Casos e Óbitos Totais e Por Milhão </h3>
-      Dados das Secretarias da Saúde. <a href="https://github.com/peixebabel/COVID-19/tree/master/data">Aqui estão as tabelas por data</a>.
+      Dados das Secretarias da Saúde. <a href="https://github.com/joaotite/COVID-19/tree/master/data">Aqui estão as tabelas por data</a>.
       
       {% include casos-por-estado.html %}
       
@@ -125,7 +125,7 @@
       <h3> Referências </h3>
       
       <ul>
-        <li> <a href="http://covid.saude.gov.br">Ministério da Saúde do Brasil</a> --Dados completos indisponíveis desde 05/06/2020-- </li>
+        <li> <a href="http://covid.saude.gov.br">Ministério da Saúde do Brasil</a> </li>
         <li> <a href="https://covid19br.github.io/">Observatório Covid</a> </li>
         <li> <a href="https://brasil.io/covid19/">Brasil.io</a> </li>
         <li> <a href="https://covid19br.wcota.me/">Wesley Cota</a> </li>
