--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,8 @@
       
       
       <h2> Número de casos e óbitos acumulados </h2>
-      Dados do Ministério da Saúde. <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
+      Dados do Ministério da Saúde. 
+      <h2> <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>. </h2>
       {% include casos.html %}
       
       {% include obitos.html %}
