--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
       
       <h2> Número de casos e óbitos acumulados </h2>
       Dados do Ministério da Saúde. 
-      <h2> <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>. </h2>
+      <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
       {% include casos.html %}
       
       {% include obitos.html %}
@@ -93,23 +93,25 @@
       
       <h2>Informações por estado </h2>
       
-      <h3> Casos e Óbitos Totais e Por Dia </h3>
-      Informações de casos e óbitos acumulados e por dia. Utilize o menu acima dos gráficos para selecionar o estado do Brasil que deseja verificar.
-      
-      Dados do Ministério da Saúde. <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
-      <strong>Substituimos os dados dos dias 05/06 a 08/06 por reportes das Secretarias dado o súbito desaparecimento do portal covid do Ministério.</strong> 
+      <h3> Casos e Óbitos Totais (Por Dia) </h3>
+      Utilize o menu acima dos gráficos para selecionar o estado do Brasil que deseja verificar.
+      Dados do Ministério da Saúde.
+      <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
+      <strong>Os dados dos dias 05/06 a 08/06 por reportes das Secretarias dado o súbito desaparecimento do portal do Ministério.</strong> 
       
       {% include resumo-por-estado.html %}
       
       <h3> Casos e Óbitos Totais e Por Milhão </h3>
-      Dados das Secretarias da Saúde. <a href="https://github.com/joaotite/COVID-19/tree/master/data">Aqui estão as tabelas por data</a>.
+      Dados das Secretarias da Saúde.
+      <a href="https://github.com/joaotite/COVID-19/tree/master/data">Aqui estão as tabelas por data</a>.
       
       {% include casos-por-estado.html %}
       
       {% include obitos-por-estado.html %}
       
       <h2> Brasil em relação ao Mundo </h2>
-      Dados mundiais fornecidos pelo <i>Center for Systems Science and Engineering (CSSE) at Johns Hopkins University</i>. <a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports">Aqui estão as tabelas por data</a>.
+      Dados mundiais fornecidos pelo <i>Center for Systems Science and Engineering (CSSE) at Johns Hopkins University</i>.
+      <a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports">Aqui estão as tabelas por data</a>.
       
       <h3> Casos e Óbitos acumulados </h3>
       
