--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
       
       <h2> Número de casos e óbitos acumulados </h2>
       Dados do Ministério da Saúde. 
-      <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
+      <h5> <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>. </h5>
       {% include casos.html %}
       
       {% include obitos.html %}
