--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,8 +79,8 @@
       
       
       <h2> Número de casos e óbitos acumulados </h2>
-      Dados do Ministério da Saúde. 
-      <h5> <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>. </h5>
+      Dados do Ministério da Saúde. <br> 
+      <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
       {% include casos.html %}
       
       {% include obitos.html %}
