--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
       
       
       <h2> Número de casos e óbitos acumulados </h2>
-      Dados do Ministério da Saúde. <br> 
+      Dados do Ministério da Saúde.<br> 
       <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
       {% include casos.html %}
       
@@ -95,14 +95,14 @@
       
       <h3> Casos e Óbitos Totais (Por Dia) </h3>
       Utilize o menu acima dos gráficos para selecionar o estado do Brasil que deseja verificar.
-      Dados do Ministério da Saúde.
-      <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.
+      Dados do Ministério da Saúde.<br>
+      <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.<br>
       <strong>Os dados dos dias 05/06 a 08/06 por reportes das Secretarias dado o súbito desaparecimento do portal do Ministério.</strong> 
       
       {% include resumo-por-estado.html %}
       
       <h3> Casos e Óbitos Totais e Por Milhão </h3>
-      Dados das Secretarias da Saúde.
+      Dados das Secretarias da Saúde.<br>
       <a href="https://github.com/joaotite/COVID-19/tree/master/data">Aqui estão as tabelas por data</a>.
       
       {% include casos-por-estado.html %}
@@ -110,7 +110,7 @@
       {% include obitos-por-estado.html %}
       
       <h2> Brasil em relação ao Mundo </h2>
-      Dados mundiais fornecidos pelo <i>Center for Systems Science and Engineering (CSSE) at Johns Hopkins University</i>.
+      Dados mundiais fornecidos pelo <i>Center for Systems Science and Engineering (CSSE) at Johns Hopkins University</i>.<br>
       <a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports">Aqui estão as tabelas por data</a>.
       
       <h3> Casos e Óbitos acumulados </h3>
