--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
       
       <h3> Casos e Óbitos Totais e Por Milhão </h3>
       Dados das Secretarias da Saúde.<br>
-      <a href="https://github.com/joaotite/COVID-19/tree/master/data">Aqui estão as tabelas por data</a>.
+      <a href="https://github.com/joaotite/COVID-19/tree/master/data">Tabelas por data</a>.
       
       {% include casos-por-estado.html %}
       
