--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,7 +97,7 @@
       Utilize o menu acima dos gráficos para selecionar o estado do Brasil que deseja verificar.
       Dados do Ministério da Saúde.<br>
       <a href="https://github.com/joaotite/COVID-19/blob/master/data/casos-br-total.csv">Baixe aqui a tabela csv</a>.<br>
-      <strong>Os dados dos dias 05/06 a 08/06 por reportes das Secretarias dado o súbito desaparecimento do portal do Ministério.</strong> 
+      <small><strong>Os dados dos dias 05/06 a 08/06 por reportes das Secretarias o súbito desaparecimento do portal do Ministério.</strong></small> 
       
       {% include resumo-por-estado.html %}
       
