--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@
       
       <h2> Brasil em relação ao Mundo </h2>
       Dados mundiais fornecidos pelo <i>Center for Systems Science and Engineering (CSSE) at Johns Hopkins University</i>.<br>
-      <a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports">Aqui estão as tabelas por data</a>.
+      <a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports">Tabelas por data</a>.
       
       <h3> Casos e Óbitos acumulados </h3>
       
