--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h1> COVID-19 </h1>
+      <b><h1> COVID-19 </h1></b>
       <p> Dados e informações do Covid-19 pelo <a href="https://www.instagram.com/joaotite/">João Tite</a>. </p>
       
       <h2>Dados referentes a {{ site.dataref }}.</h2>
